tests/ui/unsized-locals/unsized-exprs3.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/unsized-exprs3.rs:8:5
   |
LL |     udrop as fn([u8]);
   |     ^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = help: unsized fn params are gated as unstable feature `#[feature(unsized_fn_params)]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
